# unity_repo_analyzer

./: Dockerfile  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: sync-hf-github.yml  testing.yml
Reports/count_master/: architecture_report_v1.md
src/unity_repo_analyzer/: app.py  crawler.py  crew.py  main.py  server.py
src/unity_repo_analyzer/config/: agents.yaml  tasks.yaml
src/unity_repo_analyzer/helper/: helper_functions.py  llm_initializer.py  monkey_patch.py  report_path_resolver.py
src/unity_repo_analyzer/tools/: custom_file_read_tool.py  custom_unity_tool.py
src/unity_repo_reader/: crew.py
src/unity_repo_reader/config/: tasks.yaml
src/unity_repo_reader/helper/: report_path_resolver.py
tests/: test_app_config.py  test_crew.py  test_resolver.py
