[project]
name = "unity_repo_reader"
version = "0.1.0"
description = "unity_repo_reader using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5",
    "pytest>=9.0.3",
]

[project.scripts]
unity_repo_reader = "unity_repo_reader.main:run"
run_crew = "unity_repo_reader.main:run"
train = "unity_repo_reader.main:train"
replay = "unity_repo_reader.main:replay"
test = "unity_repo_reader.main:test"
run_with_trigger = "unity_repo_reader.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
