[project]
name = "unity_repo_analyzer"
version = "0.1.0"
description = "unity_repo_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5",
    "fastapi>=0.136.1",
    "gitpython>=3.1.50",
    "litellm>=1.85.1",
    "pytest>=9.0.3",
    "uvicorn>=0.47.0",
]

[project.scripts]
unity_repo_analyzer = "unity_repo_analyzer.main:run"
run_crew = "unity_repo_analyzer.main:run"
train = "unity_repo_analyzer.main:train"
replay = "unity_repo_analyzer.main:replay"
test = "unity_repo_analyzer.main:test"
run_with_trigger = "unity_repo_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/unity_repo_analyzer"]